# AiBootcamp

./: README.md  pyproject.toml
01-foundation/02-rag/Homework/: mealmaster_rag.ipynb  mealmaster_rag_prototype_buildcamp.ipynb  rag.ipynb
docs/ai/: capstone_preparation_3_final.md
docs/capstone/: buildcamp_capstone_prep.md
