[project]
name = "ai-engineering-buildcamp-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.76.0",
    "awscli>=1.44.28",
    "boto3>=1.42.37",
    "gitsource>=0.0.4",
    "google-genai>=1.61.0",
    "jaxn==0.0.4",
    "jupyter>=1.1.1",
    "markitdown[pdf]>=0.1.5",
    "minsearch==0.0.9",
    "openai>=2.15.0",
    "pillow>=12.1.0",
    "pydantic-ai>=1.55.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.2",
    "sqlitesearch>=0.0.2",
    "tiktoken>=0.12.0",
    "toyaikit>=0.0.9",
    "youtube-transcript-api>=1.2.4",
]
